Updated the edit settings panel.